tests/success/if_stmt.crema
int x=0
int y=1
int z
if (x==0) {z=2}
