tests/fail/func_arg_type_mismatch.crema
def int foo(int a) {
    return 32
}

int bar = foo(1.0)
